src/angular-app/languageforge/lexicon/directive/dc-formattedtext.css
.dc-formattedtext .ta-root {
    display: inline-block;
    background-color: white;
    border: 1px solid white;
    border-left: 1px solid #CCC;
    margin-top: -1px;
    margin-bottom: -1px;
    margin-left: 1px;
    margin-right: -1px;
}

.dc-sense .dc-formattedtext .ta-root {
    background-color: #f9f9f9;
    border: 1px solid #f9f9f9;
    border-left: 1px solid #CCC;
}

.dc-formattedtext .ta-scroll-window > .ta-bind,
.dc-formattedtext .ta-root textarea {
    background-color: white;
}

.dc-formattedtext .ta-toolbar {
    float: right;
    margin-top: -1px;
    margin-bottom: -1px;
    margin-left: 5px;
    margin-right: 5px;
}

.dc-formattedtext .ta-editor {
    width: 346px;
    height: 108px;
    overflow: auto;
    font-family: inherit;
    font-size: 14px;
    white-space: normal;
    border: 1px solid #CCC;
    border-left: 0;
    border-radius: 0 4px 4px 0;
    margin-top: -1px;
    margin-bottom: -1px;
    margin-left: 0;
    margin-right: 0;
}

.dc-formattedtext .ta-editor, 
.dc-formattedtext .ta-scroll-window > .ta-bind {
    min-height: 100px;
}

.dc-formattedtext .ta-scroll-window.form-control {
    min-height: 100%;
}

.dc-formattedtext .ta-root textarea {
    width: 335px;
}

.dc-formattedtext .ta-scroll-window > .ta-bind,
.dc-formattedtext .ta-root textarea {
    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 6px;
    padding-right: 6px;
}

.dc-formattedtext .ta-scroll-window > .ta-readonly:hover {
    cursor: not-allowed;
}

/* language span highlight */
.dc-formattedtext .ta-editor span {
    /*border: 1px solid transparent;*/
    border-radius: 9px;
    padding-left: 5px;
    padding-right: 5px;
}
.dc-formattedtext .ta-editor span:hover {
    /*border: 1px solid #ADDDDD;*/
    background-color: #ADDDDD;
}

/* auto hide the toolbar when not selected (focussed) */
.ta-root .ta-toolbar {
    display: none; 
}
.ta-root.focussed .ta-toolbar {
    display: block;
}

